chore: tweak collection service response
